k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-roomies
  labels:
    app: back-roomies
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back-roomies
  template:
    metadata:
      labels:
        app: back-roomies
    spec:
      containers:
      - name: back-roomies
        image: <IMAGE>
        volumeMounts:
        - name: punto-env-volume
          mountPath: /app/.env
          subPath: .env
          readOnly: true
        - name: config-json-volume
          mountPath: /app/serviceAccountKey.json
          subPath: serviceAccountKey.json
          readOnly: true 
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: 64Mi
            cpu: 50m
          limits:
            memory: 128Mi
            cpu: 100m
      volumes:
      - name: punto-env-volume
        secret:
          secretName: punto-env
          items:
          - key: .env
            path: .env
      - name: config-json-volume
        secret:
          secretName: firebase-sakey-json
          items:
          - key: serviceAccountKey.json
            path: serviceAccountKey.json
