k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: back-roomies-svc
  labels:
    app: back-roomies
spec:
  type: ClusterIP
  selector:
    app: back-roomies
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
