k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: back-roomies-ing
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"

spec:
  ingressClassName: nginx
  tls:
  - hosts: 
    - api-roomies.tssw.info
    secretName: cert-back-roomies
  rules:
    - host: api-roomies.tssw.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: back-roomies-svc
                port:
                  number: 80
